data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4170.wast
;; 9. **Test Description**:    Mismatched Function Signature in Loop:    - Constraint: Test accurate function signature checking within `call_indirect` in a loop.    - Test Behavior: Define a loop where an indirect function call's signature does not match the expected signature, ensuring proper trap and preventing infinite looping.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func $test-loop
      (loop $loop
        (call_indirect (type 0) (i32.const 1) (f64.const 42.0))
        (br $loop)
      )
    )
  )
  "type mismatch"
)